--- a/src/index.css
+++ b/src/index.css
@@ -5,27 +5,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Gabriela&family=Lora:wght@400;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 
 @layer base {
-  body {
-    @apply font-[Roboto];
+  body, .navbar, .navbar ul {
+    @apply font-[Roboto] bg-gradient-to-r to-yellow-300 from-amber-300;
   }
   li {
-    @apply font-semibold;
-    @apply px-4;
-    @apply cursor-pointer;
-    @apply text-[#f3973b];
-    @apply hover:text-[#f6b879];
+    @apply font-semibold px-4 cursor-pointer;
   }
   h1,
   h2,
   h3 {
-    @apply font-[Gabriela];
+    @apply font-[Gabriela] z-20;
   }
   .skills .content-item {
     @apply pt-4;
     @apply shadow-xl;
-    @apply shadow-[#423842];
     @apply hover:scale-110;
-    @apply duration-500;
+    @apply duration-75;
     @apply bg-[#f6f4f6];
     @apply text-sm;
     @apply text-[#342c34];
@@ -36,7 +31,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 250px;
+    height: 180px;
   }
 
   .projects .content-item {
@@ -54,8 +49,20 @@
   .content-div:hover {
     background-image: linear-gradient(
       to bottom right,
-      #f08519,
-      #f8c28c
+      #FBBF24,
+      #F59E0B
     ) !important;
+  }
+
+  .animate-scale, .animate-scale-group li {
+    @apply transform delay-75 hover:scale-110 hover:drop-shadow-xl;
+  }
+
+  .side-nav-group li {
+    @apply hover:rounded-r-xl w-[160px] h-[60px] flex justify-between items-center ml-[-100px] hover:ml-[-10px] duration-300;
+  }
+
+  .side-nav-group li a {
+    @apply flex justify-between items-center w-full;
   }
 }
