--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Gabriela&family=Lora:wght@400;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 
 @layer base {
-  body, .navbar, .navbar ul {
+  body, .navbar {
     @apply font-[Roboto] bg-gradient-to-r to-yellow-300 from-amber-300;
   }
   li {
